[package]
name = "smplc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
derive-new = "0.5.9"
env_logger = "0.10.0"
log = "0.4.17"
pretty_assertions = "1.3.0"
serde = {version = "1.0.152", features=['derive']}
termgraph = "0.3.0"
ts-rs = "6.2.1"
