[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler = {path = "../compiler"}
clap = { version = "4.1.1", features = ["derive"] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.152", features = ['derive'] }
cli-clipboard = "0.4.0"