[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
html-escape = "0.2.13"
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
pretty_assertions = "1.3.0"

[features]
default = ["console_error_panic_hook"]